--- a/index.html
+++ b/index.html
@@ -85,9 +85,10 @@
                     justify-content:center;
                     align-items:center;
                     font-family:Arial;">
-                    <h1 style="font-size:64px;">YAYYYYY 💖🥰✨</h1>
+                    <h1 style="font-size:64px;">מזלך 💖🥰✨</h1>
                 </div>`;
         }
     </script>
 </body>
 </html>
+
